<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/product_detail_gl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/product_detail_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:transitionName="shared_element_container_transition"
        app:layout_constraintBottom_toTopOf="@+id/product_detail_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/product_detail_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintEnd_toStartOf="@+id/product_detail_tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_detail_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/product_detail_tv_stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/stock"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="@+id/product_detail_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/product_detail_tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="0.0"
        android:textColor="@color/black"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_detail_gl" />

    <ScrollView
        android:id="@+id/product_detail_sv_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/product_detail_btn_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_tv_stock">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_detail_tv_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/lorem_ipsum" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/product_detail_btn_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/remove_from_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>