<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:context=".controller.home.CartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_home_tv_itens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:text="@string/items_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_home_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_home_cl_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_itens" />

    <ProgressBar
        android:id="@+id/fragment_home_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_home_cl_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_itens" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_home_tv_carrinho_vazio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/carrinho_vazio"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fragment_home_cl_bottom"
        app:layout_constraintEnd_toEndOf="@+id/fragment_home_rv"
        app:layout_constraintStart_toStartOf="@+id/fragment_home_rv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_itens" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_home_cl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/fragment_home_view_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <!-- TOTAL ====================================================================================-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_home_tv_total_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_home_tv_total_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_total_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="@dimen/text_extra_large"
            android:textAllCaps="true"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_view_line"
            app:layout_constraintStart_toEndOf="@+id/fragment_home_tv_total_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Subtotal ====================================================================================-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_subtotal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/subtotal"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_home_tv_subtotal_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_home_tv_subtotal_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_subtotal_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="@dimen/text_small"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_total_value"
            app:layout_constraintStart_toEndOf="@+id/fragment_home_tv_subtotal_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Shipping ====================================================================================-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_shipping_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shipping"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_home_tv_shipping_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_home_tv_shipping_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_shipping_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="@dimen/text_small"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_subtotal_value"
            app:layout_constraintStart_toEndOf="@+id/fragment_home_tv_shipping_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Shipping ====================================================================================-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_tax_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tax"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_home_tv_tax_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_home_tv_tax_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_home_tv_tax_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="0.00"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_btn_checkout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_home_tv_tax_title"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_shipping_value" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_home_btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_home_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>